# pokespecrs

./: Cargo.toml  README.md
src/: api.rs  cache.rs  command_logic.rs  commands.rs  config.rs  console.rs  enums.rs  errors.rs  generate.rs  main.rs  spec.rs  util.rs
src/api/: game_generation.rs  pokemon_move.rs
