[package]
name = "pokespecrs"
version = "0.1.0"
edition = "2024"
description = "Generate Pokemon from the command-line!"

[dependencies]
clap = { version = "4.5.40", features = ["color", "derive"] }
colored = "3.0.0"
log = "0.4.27"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
itertools = "0.14.0"
